<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="179dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dollar2" />

    <TextView
        android:id="@+id/billing_text"
        android:layout_width="157dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:paddingTop="@dimen/std_pd"
        android:paddingBottom="0dp"
        android:text="@string/bill_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.002" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="381dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billing_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rupeesRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency_rupees"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dollarRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency_dollars"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/euroRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency_euros"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/yenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency_yen"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/billEditor"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/billing_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tipText"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/std_pd"
        android:paddingTop="@dimen/std_pd"
        android:paddingBottom="0dp"
        android:text="@string/tip_title"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/tipSeeBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingStart="34dip"
        android:paddingTop="@dimen/std_pd"
        android:paddingEnd="34dip"
        android:paddingBottom="@dimen/std_pd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipText"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/calculateBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:text="@string/btn_text"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipSeeBar"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/showTipPercentage"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:paddingStart="@dimen/std_pd"
        android:paddingEnd="@dimen/std_pd"
        android:text="100%"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:textStyle=""
        app:layout_constraintBottom_toTopOf="@+id/tipSeeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/tipText"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.558" />

</androidx.constraintlayout.widget.ConstraintLayout>